syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service SpeedTacToe {
  rpc FindGame(GameSearchHandshake) returns (GameFoundHandshake);
  rpc Connect(stream Move) returns (stream GameState);
}

message GameSearchHandshake {
  string clientUuid = 1;
}

message GameFoundHandshake {
  string gameUuid = 1;
  Symbol assignedSymbol = 2;
}

message Move {
  string gameUuid = 1;
  Position position = 2;
}

message Position {
  int32 row = 1;
  int32 column = 2;
}

message GameState {
  Board board = 1;
  bool isYourTurn = 2;
  google.protobuf.Timestamp timeLimit = 3;
  WinState winState = 4;

  message WinState {
    oneof WinStateEnum {
      google.protobuf.Empty nobody = 1;
      WinningLine winner = 2;
    }

    message WinningLine {
      repeated Position positions = 1;
      Symbol symbol = 2;
    }
  }
}

message Board {
  // For 3x3 this should always have 9 elements.
  repeated BoxState boxStates = 1;

  message BoxState {
    oneof BoxStateEnum {
      google.protobuf.Empty empty = 1;
      Symbol symbol = 2;
    }
  }
}

enum Symbol {
  CIRCLE = 0;
  CROSS = 1;
}